--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="./images/favicon-portfolio.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -251,9 +251,13 @@
                     </div>
                     <div class="section-6-para">
                         With Fraazo, you can buy fresh fruits and vegetables online on the go, and spend more quality time making healthy recipes for children & your family. 
+                        <span class="fw-bold">Tech Stack:</span> HTML,CSS,JS AND BOOTSTRAP
                     </div>
                     <div class="section-6-button">
                         <a class="sec6-btn text-uppercase fw-bold" href="https://gentle-cactus-4259fc.netlify.app">View Project</a>
+                    </div>
+                    <div class="section-6-button">
+                        <a class="sec6-btn text-uppercase fw-bold" href="https://gentle-cactus-4259fc.netlify.app">Github</a>
                     </div>
                 </div>
                 <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
@@ -268,9 +272,13 @@
                     </div>
                     <div class="section-6-para">
                         Online Shopping for Men, Women, and Kids. Buy a wide range of branded clothes, apparel, accessories, shoes online at NNNOW.com
+                        <span class="fw-bold">Tech Stack:</span> HTML,CSS,JS AND BOOTSTRAP
                     </div>
                     <div class="section-6-button">
                         <a class="sec6-btn text-uppercase fw-bold" location.href='https://willowy-tartufo-0e4946.netlify.app/'">View Project</a>
+                    </div>
+                    <div class="section-6-button">
+                        <a class="sec6-btn text-uppercase fw-bold" href="https://github.com/melbinzaharia/frazo">Github</a>
                     </div>
                 </div>
                 <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
