--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <a class="sec6-btn text-uppercase fw-bold" href="https://gentle-cactus-4259fc.netlify.app">View Project</a>
                     </div>
                     <div class="section-6-button">
-                        <a class="sec6-btn text-uppercase fw-bold" href="https://gentle-cactus-4259fc.netlify.app">Github</a>
+                        <a class="sec6-btn text-uppercase fw-bold" href="https://github.com/melbinzaharia/frazo">Github</a>
                     </div>
                 </div>
                 <div class="col-lg-6 sec-6-right mt-lg-0 mt-5">
