--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="./images/favicon-portfolio.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -30,6 +34,22 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script
+  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
+</script>
+    <script>
+    GitHubCalendar(".calendar", "your-username");
+
+    // or enable responsive functionality:
+    GitHubCalendar(".calendar", "your-username", { responsive: true });
+
+    // Use a proxy
+    GitHubCalendar(".calendar", "your-username", {
+       proxy (username) {
+         return fetch(`https://your-proxy.com/github?user=${username}`)
+       }
+    }).then(r => r.text())
+</script>
     <script src="js/nav.js"></script>
 </head>
 
@@ -293,6 +313,10 @@
                     <button class="sec6-btn-see-all text-uppercase fw-bold" onclick="location.href='#'">See All
                         Projects</button>
                 </div>
+     <div class="calendar">
+    <!-- Loading stuff -->
+    Loading the data just for you.
+</div>
             </div>
         </section>
 
