--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     // Use a proxy
     GitHubCalendar(".calendar", "your-username", {
        proxy (username) {
-         return fetch(`https://your-proxy.com/github?user=${username}`)
+         return fetch(`https://your-proxy.com/github?user=${melbinzaharia}`)
        }
     }).then(r => r.text())
 </script>
