--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
 </script>
     <script>
-    GitHubCalendar(".calendar", "your-username");
+    GitHubCalendar(".calendar", "melbinzaharia");
 
     // or enable responsive functionality:
-    GitHubCalendar(".calendar", "your-username", { responsive: true });
+    GitHubCalendar(".calendar", "melbinzaharia", { responsive: true });
 
     // Use a proxy
-    GitHubCalendar(".calendar", "your-username", {
+    GitHubCalendar(".calendar", "melbinzaharia", {
        proxy (username) {
          return fetch(`https://your-proxy.com/github?user=${melbinzaharia}`)
        }
