--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </section>
         <section class="github-stats section py-5" id="github-stats">
             <h2 class="section__title">GitHub Stats</h2>
-            <!-- <span class="section__subtitle">Contribution on Github</span> -->
+            <span class="section__subtitle">Contribution on Github</span> 
             <div class="calendar"></div>
           </section>
 
