--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 </div>
             </div>
         </section>
-        <section class="github-stats section py-5" id="github-stats">
+        <section class="container-fluid section-7 github-stats section py-5" id="github-stats">
             <h2 class="section__title">GitHub Stats</h2>
             <span class="section__subtitle">Contribution on Github</span> 
             <div class="calendar"></div>
