--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid  github-stats section py-5" id="github-stats">
+        <section class=" github-stats section py-5" id="github-stats">
             <h2 class="section__title">GitHub Stats</h2>
            
             <div class="calendar"></div>
